--- a/demo1.html
+++ b/demo1.html
@@ -10,21 +10,13 @@
     </style>
 </head>
 <body>
-	<ul id="oul" class="hah">
+	<ul id="oul" class="hah gg ss">
        <li style="color:blue;text-align:center;background:#cccccc;">测试看看</li>
     </ul>
     <script type="text/javascript">
-    var oul = document.getElementById('oul')
-    oul.className = "divo"
-    /*function abs(x) {
-        if (x >= 0) {
-            return x;
-        } else {
-            return -x;
-        }
-    }
-    abs(-1)
-    alert(abs())*/
+    var arr = [1,2,3];
+    arr.length = 6
+    alert(arr)   
     </script>
 </body>
 </html>
