--- a/demo_0727.html
+++ b/demo_0727.html
@@ -76,6 +76,14 @@
 		
 	</ul>
 </div>
+
+<div class="divc">
+	<ul>
+		<li>4、提取onclick进JS window.onload </li>
+		<li><button onclick="setadd('title')">修改样式</button> </li>
+		
+	</ul>
+</div>
 </body>
 <script type="text/javascript">
 function setcolor1(color){
